<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp"
            android:weightSum="1">

            <ImageButton
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:scaleType="fitXY"
                android:id="@+id/updateDp"
                android:src="@drawable/ic_dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:hint="update profile pic"/>


            <EditText
                android:id="@+id/editFname"
                style="@style/Forms2"
                android:hint="@string/prompt_fname" />

            <EditText
                android:id="@+id/editLname"
                style="@style/Forms2"
                android:hint="@string/prompt_lname" />

            <EditText
                android:id="@+id/editPassword"
                style="@style/Forms2"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1" />

            <EditText
                android:id="@+id/editCpassword"
                style="@style/Forms2"
                android:hint="@string/prompt_cpassword"
                android:inputType="textPassword"
                android:maxLines="1" />


            <EditText
                android:id="@+id/editDob"
                style="@style/Forms2"
                android:hint="@string/prompt_dob"
                android:inputType="date" />

            <EditText
                android:id="@+id/editCountry"
                style="@style/Forms2"
                android:textColorHint="@color/input_login_hint"
                android:hint="@string/prompt_country" />

            <EditText
                android:id="@+id/editState"
                style="@style/Forms2"
                android:hint="@string/prompt_state" />

            <EditText
                android:id="@+id/editCity"
                style="@style/Forms2"
                android:hint="@string/prompt_city" />

            <Button
                android:id="@+id/update"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@color/colorPrimaryDark"
                android:text="Submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_gravity="center"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>